--- a/prac8_Cources.html
+++ b/prac8_Cources.html
@@ -17,7 +17,7 @@
         <nav>
             <div class="logo">
                 <div class="logo_img">
-                    <img src="./images/clg-logo.png" alt="" />
+                    <img src="clg-logo.png" alt="" />
                 </div>
                 &nbsp;&nbsp;
                 <div class="logo_txt">
