--- a/prac8_form2.html
+++ b/prac8_form2.html
@@ -66,7 +66,7 @@ input[type=submit]:hover {
     <nav>
         <div class="logo">
             <div class="logo_img">
-                <img src="./images/clg-logo.png" alt="">
+                <img src="clg-logo.png" alt="">
             </div> &nbsp;&nbsp;
             <div class="logo_txt">
                 <a href="practical8.html">Bharti Vidyapeeth <br>
