--- a/practical8.html
+++ b/practical8.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="logo">
                 <div class="logo_img">
-                    <img src="./images/clg-logo.png" alt="">
+                    <img src="clg-logo.png" alt="">
                 </div> &nbsp;&nbsp;
                 <div class="logo_txt">
                     <a href="practical8.html">Bharti Vidyapeeth <br>
@@ -44,7 +44,7 @@
                 <p class="abt_para2">Since its inception, Bharati Vidyapeeth has been at the forefront of creating educational opportunities for millions of students including those from the rural and tribal regions as well as from the disadvantaged groups.</p>
             </div>
             <div class="abt_img">
-                <img src="./images/founder.jpg" alt="founder_logo">
+                <img src="founder.jpg" alt="founder_logo">
             </div>
             
         </div>
